--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-animated-ellipsis": "^2.0.0",
     "react-native-collapsible": "^1.5.3",
     "react-native-dropdown-picker": "^3.7.1",
     "react-native-gesture-handler": "~1.8.0",
