--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^14.14.10",
     "axios": "^0.21.0",
     "expo": "^40.0.0",
+    "expo-app-loading": "^1.0.1",
     "expo-blur": "~8.2.2",
     "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
@@ -33,7 +34,7 @@
     "react-native-animated-ellipsis": "^2.0.0",
     "react-native-collapsible": "^1.5.3",
     "react-native-dropdown-picker": "^3.7.1",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native-gesture-handler": "^1.9.0",
     "react-native-hide-show-password-input": "^1.1.0",
     "react-native-image-crop-picker": "^0.35.2",
     "react-native-image-picker": "^3.1.2",
@@ -44,10 +45,11 @@
     "react-native-paper": "^4.5.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-really-awesome-button": "^1.6.0",
-    "react-native-reanimated": "~1.13.0",
+    "react-native-reanimated": "^1.13.2",
     "react-native-redash": "^15.11.1",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
+    "react-native-svg": "^12.1.0",
     "react-native-video": "^5.1.0-alpha8",
     "react-native-web": "~0.13.12",
     "s-date": "^1.6.4",
