--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-status-bar": "~1.0.3",
     "faker": "^5.1.0",
     "galio-framework": "^0.7.1",
+    "lottie-react-native": "~2.6.1",
     "radio-buttons-react-native": "^1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -35,22 +36,12 @@
     "react-native-collapsible": "^1.5.3",
     "react-native-dropdown-picker": "^3.7.1",
     "react-native-gesture-handler": "^1.9.0",
-    "react-native-hide-show-password-input": "^1.1.0",
-    "react-native-image-crop-picker": "^0.35.2",
-    "react-native-image-picker": "^3.1.2",
-    "react-native-keyboard-aware-scroll-view": "^0.9.3",
-    "react-native-material-dropdown": "^0.11.1",
-    "react-native-modal": "^11.5.6",
     "react-native-modals": "^0.19.9",
     "react-native-paper": "^4.5.0",
-    "react-native-picker-select": "^8.0.4",
-    "react-native-really-awesome-button": "^1.6.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-redash": "^15.11.1",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
-    "react-native-svg": "^12.1.0",
-    "react-native-video": "^5.1.0-alpha8",
     "react-native-web": "~0.13.12",
     "s-date": "^1.6.4",
     "util": "^0.12.3"
