--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-collapsible": "^1.5.3",
     "react-native-dropdown-picker": "^3.7.1",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-image-header-scroll-view": "^1.0.0",
     "react-native-modals": "^0.19.9",
     "react-native-paper": "^4.5.0",
     "react-native-reanimated": "^1.13.2",
