--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "expo-status-bar": "~1.0.3",
     "faker": "^5.1.0",
     "galio-framework": "^0.7.1",
-    "lottie-react-native": "~2.6.1",
     "radio-buttons-react-native": "^1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-animated-ellipsis": "^2.0.0",
     "react-native-collapsible": "^1.5.3",
+    "react-native-flash-message": "^0.1.22",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-modals": "^0.19.9",
     "react-native-paper": "^4.5.0",
