--- a/app.json
+++ b/app.json
@@ -17,7 +17,9 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier":"com.minhtungle411.TraCuuTuyenSinh",
+      "buildNumber":"1.0.0"
     },
     "android": {
       "adaptiveIcon": {
