--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "@react-navigation/stack": "^5.12.8",
     "@types/node": "^14.14.10",
     "axios": "^0.21.0",
-    "expo": "^40.0.0",
+    "expo": "^41.0.1",
     "expo-app-loading": "^1.0.1",
     "expo-blur": "~8.2.2",
-    "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
     "faker": "^5.1.0",
     "galio-framework": "^0.7.1",
@@ -40,7 +39,7 @@
     "react-native-paper": "^4.5.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.16.2",
     "s-date": "^1.6.4",
     "util": "^0.12.3"
   },
