--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.6",
-    "@react-native-community/datetimepicker": "3.0.4",
+    "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "5.9.7",
-    "@react-native-picker/picker": "1.9.2",
+    "@react-native-community/netinfo": "6.0.0",
+    "@react-native-picker/picker": "1.9.11",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/material-bottom-tabs": "^5.3.10",
@@ -23,23 +23,23 @@
     "axios": "^0.21.0",
     "expo": "^41.0.1",
     "expo-app-loading": "^1.0.1",
-    "expo-blur": "~8.2.2",
-    "expo-status-bar": "~1.0.3",
+    "expo-blur": "~9.0.3",
+    "expo-status-bar": "~1.0.4",
     "faker": "^5.1.0",
     "galio-framework": "^0.7.1",
     "radio-buttons-react-native": "^1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-animated-ellipsis": "^2.0.0",
     "react-native-collapsible": "^1.5.3",
     "react-native-flash-message": "^0.1.22",
-    "react-native-gesture-handler": "^1.9.0",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-modals": "^0.19.9",
     "react-native-paper": "^4.5.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.0",
-    "react-native-web": "^0.16.2",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.0.0",
+    "react-native-web": "~0.13.12",
     "s-date": "^1.6.4",
     "util": "^0.12.3"
   },
