--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-native-paper": "^4.5.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-table-component": "^1.2.1",
     "react-native-web": "~0.13.12",
     "s-date": "^1.6.4",
     "util": "^0.12.3"
