--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-status-bar": "~1.0.4",
     "faker": "^5.1.0",
     "galio-framework": "^0.7.1",
+    "pinar": "^0.11.0",
     "radio-buttons-react-native": "^1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -39,7 +40,6 @@
     "react-native-paper": "^4.5.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
-    "react-native-snap-carousel": "^3.9.1",
     "react-native-table-component": "^1.2.1",
     "react-native-web": "~0.13.12",
     "s-date": "^1.6.4",
